src/style.css
:root {
  --sub-color: rgba(247, 247, 217, 0.79);
  --dark-accent: #0a246588;
}

@media (max-width: 750px) {
  body {
    max-width: 100%;
    overflow-x: hidden;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    text-align: center;
  }

  h1 {
    font-size: 25px !important;
    color: red;
    line-height: 30px !important;
  }

  h2 {
    font-size: 14px !important;
    font-weight: 200;
    margin: 5px 5px !important;
  }

  h3 {
    font-size: 16px !important;
  }

  p {
    text-align: justify;
    color: #312b33;
  }

  .project-card {
    text-align: center !important;
  }

  .main-block {
    padding: 0 5px !important;
  }

  .hidden-img {
    display: none;
  }

  .button {
    margin: 0 auto;
    padding: 15px !important;
  }
  .a-button {
    margin: 0 auto !important;
    padding: 10px !important;
  }
}

/* DESKTOP STARTS HERE */

body {
  scroll-behavior: smooth;
  background-color: #b899ff;
  background-image: radial-gradient(
      at 6% 71%,
      hsla(34, 61%, 79%, 1) 0px,
      transparent 50%
    ),
    radial-gradient(at 78% 57%, hsla(14, 73%, 65%, 1) 0px, transparent 50%),
    radial-gradient(at 12% 95%, hsla(24, 95%, 65%, 1) 0px, transparent 50%),
    radial-gradient(at 93% 99%, hsla(38, 89%, 79%, 1) 0px, transparent 50%),
    radial-gradient(at 44% 49%, hsla(171, 80%, 65%, 1) 0px, transparent 50%),
    radial-gradient(at 95% 48%, hsla(279, 61%, 72%, 1) 0px, transparent 50%),
    radial-gradient(at 4% 31%, hsla(98, 63%, 70%, 1) 0px, transparent 50%);

  max-width: 100%;
  overflow-x: hidden;
}

h1,
h2,
h5 {
  color: white;
  text-align: center;
  font-family: "Italiana", serif;
}

h1 {
  font-size: 85px;
  line-height: 90px;
  letter-spacing: 12px;
}
h2 {
  font-size: 2px;
  font-weight: 400;
  line-height: 28.13px;
  letter-spacing: 10px;
  margin-top: ;
}

h3 {
  font-weight: 200;
  display: inline;
  font-size: 25px;
  letter-spacing: 2px;
  text-transform: uppercase;
}

h4 {
  color: var(--sub-color);
  font-weight: 100;
  font-size: 17px;
  letter-spacing: 2px;
  text-transform: uppercase;
  text-shadow: 3px 3px 9px #1b181d86;
}
h5,
h3 {
  color: #0a246588;
  text-align: center;
  font-weight: 400;
  letter-spacing: 3px;
  font-size: 17px;
  text-transform: uppercase;
}

a,
p,
li,
ul,
h3,
h5 {
  font-family: "Poppins", sans-serif;
}

p,
li {
  color: #312b339d;
}

hr.h-color {
  color: white;
}

li {
  font-weight: 200;
  letter-spacing: 3px;
}

a {
  text-decoration: none;
  color: #b2bfdf;
}

a:hover {
  color: rgba(246, 246, 204, 0.79);
  padding-top: 10px;
  padding-bottom: 5px;
  font-size: 17px;
}

a {
  transition: all 250ms ease-in;
}

.a-button:hover {
  color: rgba(246, 246, 191, 0.79) !important;
  text-shadow: -5px 1px 10px #5c6977af;
}

.active-page a {
  color: rgba(246, 246, 191, 0.79);
  text-transform: capitalize;
  font-size: 25px;
  line-height: 26px;
}

.fa-mine {
  margin-right: 3px;
}

.describe {
  margin: 10px 100px;
  text-align: right !important;
}

.content {
  min-height: 100vh;
}

.main-block {
  padding: 30px 100px;
  margin: 97px 60px;
}

.glow {
  text-shadow: rgba(255, 214, 143, 0.9) 0px 0px 87px,
    rgba(255, 231, 189, 0.51) 0px 0px 28px;

  transition: all 700ms ease-in-out;
}

.glow:hover {
  text-shadow: rgba(255, 214, 143, 0.986) 0px 0px 87px,
    rgba(219, 146, 20, 1) 0px 0px 243px, rgba(255, 245, 227, 0.893) 0px 0px 28px,
    rgba(255, 253, 250, 1) 0px 0px 23px;
}

.hiddenglow {
  text-shadow: none;

  /*transition: all 50ms ease-out;*/
}

.hidden-img {
  filter: grayscale(87%) blur(5px);
  transition: all 500ms ease-in-out;
}

.hidden-img:hover {
  filter: grayscale(0%) blur(0px);
}

.active-page a,
.hiddenglow:hover,
.a-button:hover {
  text-shadow: rgba(255, 214, 143, 0.986) 0px 0px 87px,
    rgba(219, 146, 20, 1) 0px 0px 243px, rgba(255, 245, 227, 0.893) 0px 0px 28px,
    rgba(255, 253, 250, 1) 0px 0px 23px;
}

.project-card {
  text-align: right;
}

div#side-nav {
  transition: all 400ms ease-in-out;
}

.projects-heading {
  font-size: 48px;
  font-weight: 200 !important;
  line-height: 85px;
  letter-spacing: 10px;
  margin-top: 200px;
  margin-bottom: 50px;
  padding: 20px 15px;
}

.button {
  background-color: rgba(124, 116, 116, 0.11);
  border-radius: 40px;

  margin: 0 auto;
  padding: 18px 40px;
  color: rgba(246, 246, 191, 0.79);
  font-size: 14px;
  letter-spacing: 6px;
  border: none;
  transition: all 500ms ease-in;
}

.button:hover {
  font-size: 16px;
  letter-spacing: 9px;
  background-color: transparent;
}

.menu-btns {
  transition: all 50ms ease-out;
  transition-delay: 0.5s;
}

.sign {
  font-size: 9px;
  font-weight: 100;
  transition: all 70ms ease-in;
}

a.sign:hover {
  font-size: 10px;
  color: grey;
}

#menulist {
  padding: 5px 10px;
  margin: 114px 24px;
}

#footer a {
  color: var(--dark-accent);
}

